--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -36,3 +36,11 @@
 	// Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
 	// "remoteUser": "root"
 }
+{
+	"name": "github.copilot.advanced"
+
+	"features": {
+		"github.copilot.editor.enableAutoCompletions",
+		"github.copilot.enable"
+	}
+}
